ログイン画面とサインアップ画面を追加

--- a/study-memory/angular.json
+++ b/study-memory/angular.json
@@ -127,6 +127,10 @@
               "devServerTarget": "study-memory:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
