--- a/study-memory/package.json
+++ b/study-memory/package.json
@@ -27,7 +27,8 @@
     "firebase": "^7.0.0 || ^8.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "zxcvbn3": "^0.1.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": ">= 0.900 < 0.1200",
