--- a/study-memory/package.json
+++ b/study-memory/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "~11.2.8",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "firebase": "^7.0.0 || ^8.0.0",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3",
